--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "node-sass": "^4.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.2.2",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
