--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "node-sass": "^4.12.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "eslint": "^6.2.2",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1"
   }
 }
